--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<div class="container">
 						<div class="content">
 							<div id="magic"></div>
-							<h2 class="fn_title" title="shytoshikusama">Shytoshi Kusdma</h2>
+							<h2 class="fn_title" title="shytoshikusama">Shytoshi Kusama</h2>
 							<p class="fn_desc fn_animated_text">Join the pack with Shytoshi Kusama, the token designed to shape the future of cryptocurrency!</p>
 						</div>
 					</div>
