--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 							</div>
 							
 							<div class="buttons">
-								<a href="about.html" class="shytoshikusama_fn_button only_text">
+								<a href="#" class="shytoshikusama_fn_button only_text">
 									<span class="text">More About US</span>
 								</a>
 							</div>
@@ -686,7 +686,7 @@
 						<div class="clearfix"></div>
 						
 						<!-- Main Button -->
-						<a href="collection.html" class="shytoshikusama_fn_button only_text full">
+						<a href="#" class="shytoshikusama_fn_button only_text full">
 							<span class="text">Click here to See all ITEMS</span>
 						</a>
 						<!-- !Main Button -->
